# proverbilo

./: .goreleaser.yaml  Cargo.toml  README.md  build.rs  proverbaro.txt
.github/workflows/: ci.yml
packaging/aur/: config.env
packaging/aur/proverbilo/: .SRCINFO  PKGBUILD
packaging/aur/proverbilo-bin/: .SRCINFO  PKGBUILD
packaging/aur/proverbilo-git/: .SRCINFO  PKGBUILD
src/: main.rs
