[package]
name = "proverbilo"
version = "0.1.0"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
structopt = "0.3"
