[package]
name = "proverbilo"
description = "Programo por montri hazardajn proverbojn en Esperanto."
version = "0.1.9"
authors = ["Lucas Rooyakkers <lucas.rooyakkers@protonmail.com>", "Mark Wootton <wootton.mj@gmail.com>"]
edition = "2024"
homepage = "https://github.com/Fierthraix/proverbilo"
repository = "https://github.com/Fierthraix/proverbilo"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
pico-args = "0.5"

[build-dependencies]
